tests/errors/test_40.x
// Unknown type

fn main() -> void {

    let y: (i64, What, i8*);

    let x: WHAT;

}